<resources>


    <string name="app_name">BodyMap</string>
    <string name="label_imc">IMC</string>
    <string name="label_tmb">TMB</string>
    <string name="descricao_imc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar
        o peso do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\nPreencha os campos de peso e altura para descobrir o seu IMC</string>
    <string name="hint_weigth">insira seu peso (KG)</string>
    <string name="hint_height">insira sua altura (CM)</string>
    <string name="calc">Calcular</string>
    <string name="fields_messages">todos os campos devem ser diferentes de zero</string>

    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="normal">Normal</string>
    <string name="imc_high_weight">Acima do peso</string>
    <string name="imc_so_high_weight">Moderadamente obeso</string>
    <string name="imc_severely_high_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>

    <string name="imc_response">IMC: %1$.2f</string>
    <string name="hint_age">Idade (anos)</string>
    <string name="descricao_tmb">Taxa metabólica basal é a quantidade  de energia, em calorias, que gastamos com o corpo em descanso. Calcular a TMB é o primeiro passo para estimar quantas calorias precisamos ingerir por dia para ganhar ou perder peso.</string>

    <string name="tmb_response">1-TMB: %1$.2f para uma rotina sem atividade física --- </string>
    <string name="tmb_response2"> 2-TMB: %1$.2f para 1 à 3 dias/semana com atividade física --- </string>
    <string name="tmb_response3"> 3-TMB: %1$.2f para 3 à 5 dias/semana com atividade física --- </string>
    <string name="tmb_response4"> 4-TMB: %1$.2f para 6 à 7 dias/semana com atividade física --- </string>
    <string name="tmb_response5">5-TMB: %1$.2f para 2x/dia ou muito pesado</string>
    <string name="genero">Você é do genêro masculino?</string>
    <string name="title_genero">Pergunta de genêro</string>
    <string name="sim">Sim</string>
    <string name="não">Não</string>
    <string name="title_tmb">Sua TMB:</string>


</resources>