<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        tools:context="co.tiagoaguiar.codelab.mayapplication.ImcActivity">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="40dp"
            android:text="@string/descricao_tmb" />

        <EditText
            android:id="@+id/edit_tmb_age"
            style="@style/EditTextForm"
            android:hint="@string/hint_age"
            android:inputType="number"
            android:maxLength="3" />

        <EditText
            android:id="@+id/edit_tmb_weight"
            style="@style/EditTextForm"
            android:hint="@string/hint_weigth"
            android:inputType="number"
            android:maxLength="3" />

        <EditText
            android:id="@+id/edit_tmb_height"
            style="@style/EditTextForm"
            android:hint="@string/hint_height"
            android:inputType="number"
            android:maxLength="3" />

        <Button
            android:id="@+id/btn_tmb_send"
            style="@style/ButtonForm"
            android:text="@string/calc"
            android:textColor="@android:color/white" />

    </LinearLayout>
</ScrollView>
